Complete -toile-d-Hiver project with special features

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/assets/p.jpg">
     <title>Éclat d'Hiver</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@200;300;400&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
@@ -41,5 +41,7 @@
 </head>
 <body>
     <div id="root"></div>
+
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
